--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
 
   <body>
-    <div class="header">
-      <font size="7">Welcome to our wildlife website</font>
-    </div>
+    <header>
+      <h1>Welcome to our wildlife website</h1>
+    </header>
 
     <div class="nav">
       <ul>
@@ -34,29 +34,29 @@
 
     <main>
       <article>
-        <font size="6">The trouble with Bears</font>
+        <h2>The trouble with Bears</h2>
         <br><br>
-        By Evan Wild
+        <p>By Evan Wild</p>
         <br><br>
-        Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.
+        <p>Tall, lumbering, angry, dangerous. The real live bears of this world are proud, independent creatures, self-serving and always on the hunt for food. Nothing like the bears you see on TV, like Baloo from renowned documentary, The Jungle Book.</p>
         <br><br>
-        So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.
+        <p>So what are bears really like, and why does the world's media portray them with such a skewed vision? In this article we try to answer those questions, and give you a real insight into the life of the bear.</p>
         <br><br>
-        <font size="5">Types of bear</font>
+        <h3>Types of bear</h3>
         <br><br>
-        Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.
+        <p>Bears come in two varieties — large and medium. You don't get small bears. If you have seen a small bear, then it was in fact probably a baby bear (cub) from another species.</p>
         <br><br>
-        Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.
+        <p>Bears can also be classified in terms of their habitat — both large and medium bears are just as at home in urban areas as they are in the countryside. Different habitats encourange different behaviour however, as you'll find out below. The below table also gives you some useful facts about bears.</p>
         <br><br>
         <table>
           <thead>
             <tr>
-              <td>Bear Type</td>
-              <td>Coat</td>
-              <td>Adult size</td>
-              <td>Habitat</td>
-              <td>Lifespan</td>
-              <td>Diet</td>
+              <th scope="col">Bear Type</th>
+              <th scope="col">Coat</th>
+              <th scope="col">Adult size</th>
+              <th scope="col">Habitat</th>
+              <th scope="col">Lifespan</th>
+              <th scope="col">Diet</th>
             </tr>
           </thead>
           <tbody>
@@ -79,7 +79,7 @@
           </tbody>
         </table>
 
-        <font size="5">Habitats and Eating habits</font>
+        <h3>Habitats and Eating habits</h3>
         <br><br>
         Wild bears eat a variety of meat, fish, fruit, nuts, and other natually growing ingredients. In general they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
         <br><br>
@@ -91,21 +91,20 @@
         <br><br>
         Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonalds, to their own apartment.
         <br><br>
-        <font size="5">Mating rituals</font>
+        <h3>Mating rituals</h3>
         <br><br>
         Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear.
         <br><br>
         The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
         <br><br>
         <audio controls>
-          <source src="media/bear.mp3" type="audio/mp3">
-          <source src="media/bear.ogg" type="audio/ogg">
+          <source src="media/bear.mp3" alt="Áudio de um urso" type="audio/mp3">
+          <source src="media/bear.ogg" alt="Áudio de um urso" type="audio/ogg">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
 
         <aside>
-
-          <font size="5">About the author</font>
+          <h3>About the author</h3>
         <br><br>
           Evan Wild is an unemployed plumber from Doncaster, who has been really "in to" wildlife since childhood. He once went to Chester Zoo on holiday, but got ill after eating a doner kebab.
         <br><br>
@@ -117,42 +116,36 @@
 
           <div class="comment-wrapper">
 
-            <font size="6">Add comment</font>
+            <h2>Add comment</h2>
 
             <form class="comment-form">
-              <div class="flex-pair">
+              <label class="flex-pair">
                 Your name:
                 <input type="text" name="name" id="name" placeholder="Enter your name">
-              </div>
-              <div class="flex-pair">
+              </label>
+              <label class="flex-pair">
                 Your comment:
                 <input type="text" name="comment" id="comment" placeholder="Enter your comment">
-              </div>
+              </label>
               <div>
                 <input type="submit" value="Submit comment">
               </div>
             </form>
 
-            <font size="6">Comments</font>
+            <h2>Comments</h2>
 
             <ul class="comment-container">
-
               <li>
-
                 <p>Bob Fossil</p>
-
                 <p>Oh I am so glad you taught me all about the big brown angry guys in the woods. With their sniffing little noses and their bad attitudes, they can sure be a menace — I was thinking of putting them all in a truck and driving them outta here. I run a zoo, you know.</p>
-
               </li>
-
             </ul>
-
           </div>
         </section>
       </article>
 
       <div class="secondary">
-        <font size="6">Related</font>
+        <h2>Related</h2>
 
         <ul>
           <li><a href="#">The trouble with Bees</a></li>
